<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/registration_tool_bar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/input_form_bg">
        <RadioGroup android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="50dp">
            <RadioButton
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:id="@+id/customer_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:button="@drawable/radio_button_selector"
                android:checked="true"
                android:drawablePadding="10dp"
                android:textColor="@color/white"
                android:text="@string/registration_page_customer_radio_button" />
            <RadioButton
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:id="@+id/doctor_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:checked="false"
                android:button="@drawable/radio_button_selector"
                android:textColor="@color/very_light_orange"
                android:layout_marginTop="15dp"
                android:text="@string/registration_page_doctor_customer_radio_button" />
        </RadioGroup>
        <ImageView
            android:paddingHorizontal="40dp"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:srcCompat="@drawable/orange_female_smile_paper"
            android:layout_gravity="bottom|left"
            android:translationX="-50dp"
            android:translationY="40dp"/>
        <ImageButton
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/button_shape_bg"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="secondRegistrationPage"/>
        <TextView
            android:textStyle="bold"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/next_button"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_gravity="bottom|right"
            android:textColor="@color/white"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="0.5"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_orange_title_orange_big"/>

    </LinearLayout>
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.2"
                 android:layout_gravity="bottom">

        <ImageButton
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/button_shape_bg"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:onClick="toLoginPage"/>
        <TextView
            android:textStyle="bold"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/login_button"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_gravity="right"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/registration_page_allready_registered"
            android:layout_gravity="left"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:textColor="@color/black"/>

    </FrameLayout>

</LinearLayout>